Fix broken link caused by z-index

--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,8 @@
-#entryimage {
-	width: 100%;
-	height: 100%;
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: -5000;
+#entryimage a img {
+	margin: auto;
+	display: block;
 }
+
 
 html {
 	font-family: Helvetica, sans-serif;
